fix alignment issues

--- a/src/pages/wallet/SendPage/Send.module.scss
+++ b/src/pages/wallet/SendPage/Send.module.scss
@@ -8,5 +8,5 @@
   color: var(--token-light-100, #8b8e9c);
   @include XX-Small;
   text-align: right;
-  padding-right: 20;
+  padding-right: 20px;
 }
